added a separate function for the button with the equal sign

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div>
             <input type="button" class="Dot" value="." onClick="dot()">
             <input type="button" class="zero" value="0" onClick="addDigit(0)">
-            <input type="button" class="operator" value="=" onClick="(operate())">
+            <input type="button" class="operator" value="=" onClick="(equal())">
         </div>
     </form>
 </body>
